--- a/src/SampleProject.Specs/SampleProject.Specs.csproj
+++ b/src/SampleProject.Specs/SampleProject.Specs.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -89,7 +89,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="SpecFlowHelper">
-      <HintPath>..\..\..\..\..\..\CWI\Loreal\Coop\src\references\SpecFlowHelper\SpecFlowHelper.dll</HintPath>
+      <HintPath>..\references\SpecFlowHelper\SpecFlowHelper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
