--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,15 +55,13 @@ before_deploy:
 
 deploy:
   - provider: GitHub
+    tag: v$(GitVersion_SemVer)
+    release: v$(GitVersion_SemVer)
     auth_token:
       secure: tPi7Y0tY8n4VFehuXK57BIGCzVI7GgrSFxJ0qJyJRSwwyl3KjbnODiLrqOqI1QCf
-    artifact: SampleProject-release.zip
     draft: false
-    prerelease: false
-    on:
-      branch: master                 # release from master branch only
-      appveyor_repo_tag: false       # deploy on tag push only  
-  
+    prerelease: $(GIT_PRE_RELEASE)
+     
 artifacts: 
   - path: .\tools\fxcop-report.xml
     name: FxCop-Report  
