--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ environment:
 
 install:
 - cmd: choco install resharper-clt.portable
+- cmd: choco install fxcop
   
 nuget:
   account_feed: false
