--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,9 +43,9 @@ test_script:
      
   - ps: .\src\packages\coveralls.net.0.6.0\tools\csmacnz.Coveralls.exe --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
 
-after_test:  
-  - cmd: >-
-       vstest.console.exe /logger:Appveyor "%cd%\src\SampleProject.Specs\bin\DEV\SampleProject.Specs.dll"     
+#after_test:  
+#  - cmd: >-
+#       vstest.console.exe /logger:Appveyor #"%cd%\src\SampleProject.Specs\bin\DEV\SampleProject.Specs.dll"     
        
        .\tools\BadgesSharp\BadgesSharpCmd.exe giacomelli SampleProject SpecFlow %ERRORLEVEL% %GITHUB_REPO_TOKEN% 
 
