--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ test_script:
 #  - cmd: >-
 #       vstest.console.exe /logger:Appveyor #"%cd%\src\SampleProject.Specs\bin\DEV\SampleProject.Specs.dll"     
        
-       .\tools\BadgesSharp\BadgesSharpCmd.exe giacomelli SampleProject SpecFlow %ERRORLEVEL% %GITHUB_REPO_TOKEN% 
+#       .\tools\BadgesSharp\BadgesSharpCmd.exe giacomelli SampleProject SpecFlow %ERRORLEVEL% #%GITHUB_REPO_TOKEN% 
 
 before_deploy:
   - msbuild.exe src\SampleProject.sln /p:DeployOnBuild=true /p:PublishProfile=PRD.pubxml
